# robot4ws_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Dynamixel_parameters.msg  Dynamixel_parameters1.msg  Dynamixel_parameters1.msg.bak  Dynamixels.msg  JointState1.msg  Motor_current.msg  Motor_current_int.msg  Motor_temperature.msg  Motor_temperature_int.msg  Operating_modes.msg  Operating_modes_int.msg  SensorState.msg  Sound.msg  Vector3Array.msg  VersionInfo.msg  neural_network_in_out.msg
srv/: enable_logiteck_joystick.srv  kinematic_mode.srv  reset_board.srv
