<?xml version="1.0"?>
<package format="2">
  <name>robot4ws_msgs</name>
  <version>1.1.0</version>
  <description>A library of custom messages for the 4 Wheels Steering Robot. This package allows to control directly each of the Dynamixel installed, other than get information about Sensors and firmware and software version. </description>
  <maintainer email="matteo.caruso@phd.units.it">Matteo Caruso</maintainer>
  <license>GPLv3</license>
  <author email="matteo.caruso@phd.units.it">Matteo Caruso</author>
  <url>https://github.com/matteocaruso1993/robot4ws_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend> 

</package>
